<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="co.edu.udea.compumovil.gr4.lab1ui.MainActivity">

    <RelativeLayout
        android:layout_weight="3"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/nombre"
            android:hint="@string/nombre"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignRight="@+id/fecha_nacimiento"
            android:layout_alignEnd="@+id/fecha_nacimiento" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/apellido"
            android:hint="@string/apellido"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/nombre"
            android:layout_alignRight="@+id/seleccionar_fecha"
            android:layout_alignEnd="@+id/seleccionar_fecha" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fecha_nacimiento"
            android:hint="@string/fecha_nacimiento"
            android:layout_below="@+id/apellido"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seleccionar"
            android:id="@+id/seleccionar_fecha"
            android:layout_below="@+id/apellido"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <RadioGroup
            android:id="@+id/seleccionar_genero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/seleccionar_fecha">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/masculino"
                android:id="@+id/masculino"
                android:checked="false" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/femenino"
                android:id="@+id/femenino"
                android:checked="false" />
        </RadioGroup>

        <AutoCompleteTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/pais"
            android:id="@+id/pais"
            android:layout_below="@+id/seleccionar_genero"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/telefono"
            android:layout_toLeftOf="@+id/telefono" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/telefono"
            android:id="@+id/telefono"
            android:layout_alignTop="@+id/pais"
            android:layout_toRightOf="@+id/fecha_nacimiento"
            android:layout_alignRight="@+id/seleccionar_fecha"
            android:layout_alignEnd="@+id/seleccionar_fecha" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/direccion"
            android:id="@+id/direccion"
            android:layout_below="@+id/pais"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/correo"
            android:id="@+id/correo"
            android:layout_below="@+id/direccion"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignRight="@+id/spinner"
            android:layout_alignEnd="@+id/spinner" />

        <Spinner
            android:layout_width="168dp"
            android:layout_height="wrap_content"
            android:id="@+id/spinner"
            android:layout_below="@+id/correo"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/favorito"
            android:id="@+id/favorito"
            android:checked="false"
            android:layout_alignTop="@+id/spinner"
            android:layout_toRightOf="@+id/pais"
            android:layout_toEndOf="@+id/pais" />

    </RelativeLayout>


    <RelativeLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text=""
            android:id="@+id/escritorio"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_toStartOf="@+id/mostrar"
            android:layout_toLeftOf="@+id/mostrar" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mostrar"
            android:id="@+id/mostrar"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

</LinearLayout>
